# komodo

./: README.md
arm2/: CMakeLists.txt  package.xml
arm2/meshes/: sand_box_osher.STL
komodo/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
komodo/devel/include/espeak_ros/: EspeakConfig.h
komodo/devel/include/komodo2_perception/: DetectedObject.h  DetectedObjectsArray.h  GetFloatArrayFeature.h  GetFloatArrayFeatureRequest.h  GetFloatArrayFeatureResponse.h  GetNormals.h  GetNormalsRequest.h  GetNormalsResponse.h  PclConfig.h
komodo/devel/include/roboteq_control/: ControlStatus.h  MotorStatus.h  Peripheral.h  RoboteqAnalogInputConfig.h  RoboteqControllerConfig.h  RoboteqEncoderConfig.h  RoboteqPIDConfig.h  RoboteqPIDtypeConfig.h  RoboteqParameterConfig.h  RoboteqPulseInputConfig.h  ServiceRequest.h  ServiceResponse.h
komodo/devel/lib/bms_interface/: bms_interface_node
komodo/devel/lib/espeak_ros/: espeak_node
komodo/devel/lib/komodo2_hw/: komodo2_hw_node
komodo/devel/lib/komodo2_perception/: cloud_transformer  feature_extractor
komodo/devel/lib/komodo2_teleop/: komodo2_teleop_node
komodo/devel/lib/pkgconfig/: arm2.pc  bms_interface.pc  espeak_ros.pc  intel_d435.pc  komodo2_controllers.pc  komodo2_description.pc  komodo2_hw.pc  komodo2_perception.pc  usb_cams.pc  (+4 more)
komodo/src/komodo2_hw/: package.xml
komodo2_controllers/: CMakeLists.txt  ros_control_plugins.xml
komodo2_description/: CMakeLists.txt
komodo2_gazebo/macros/: asus_xiton_pro_live_depth_cam.xacro
komodo2_hw/: CMakeLists.txt
komodo2_hw/src/: ricboard_pub.cpp
komodo2_rl/src/: komodo_learn.py
komodo2_rl/src/environments/: Spawner.py  komodo_env.py
komodo2_rl/src/model/: model.ckpt.data-00000-of-00001
komodo2_rl/src/model_a2c/: checkpoint  model.ckpt.data-00000-of-00001
(+73 files in other folders)
